Normal Edit Modifier Radial Mode broken with target object #44677

Closed
opened 2015-05-11 21:53:50 +02:00 by Gottfried Hofmann · 6 comments

System Information
Ubuntu 14.04.02 LTS Geforce GTX 580

Blender Version
Broken: 2.74 release up to latest buildbot 097862c

Short description of error

Radial Normals behave like parallel normals when using a target object

Exact steps for others to reproduce the error

Open attached .blend: normals.edit.birch.blend - go to edit mode - normals are fine. Go out of edit mode - select the Empty as target object (it is at the same location as the left tree's origin). The shading changes. Go to edit mode - the normals are all parallel and not even pointing in a direction related to the empty.
(the normals shown are vertex-per-face-normals).

**System Information** Ubuntu 14.04.02 LTS Geforce GTX 580 **Blender Version** Broken: 2.74 release up to latest buildbot 097862c **Short description of error** Radial Normals behave like parallel normals when using a target object **Exact steps for others to reproduce the error** Open attached .blend: [normals.edit.birch.blend](https://archive.blender.org/developer/F172824/normals.edit.birch.blend) - go to edit mode - normals are fine. Go out of edit mode - select the Empty as target object (it is at the same location as the left tree's origin). The shading changes. Go to edit mode - the normals are all parallel and not even pointing in a direction related to the empty. (the normals shown are vertex-per-face-normals).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann
Bastien Montagne self-assigned this 2015-05-12 10:45:43 +02:00

Yep, something wrong here!

Yep, something wrong here!

This issue was referenced by ae00e42bc2

This issue was referenced by ae00e42bc291c5ff3914ff604892f3d79eaa999c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ae00e42bc2.

Closed by commit ae00e42bc2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44677
No description provided.