Fix T44677: Normal Edit Modifier Radial Mode broken with target object.

Very stupid mistake, odd nobody hit this earlier... :/